--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,12 +8,13 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">14,250</td><td></td><td></td></tr>
+<tr><th colspan="8">SampleSuite</th></tr>
+<tr><td><a href="#t0">SampleTest</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">121</td><td>featureone</td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testScripts.Booksearchtest</td><td><a href="#m0">crimenovel</a></td><td rowspan="1">1743850160460</td><td rowspan="1">7811</td></tr><tr class="passedeven"><td><a href="#m1">f</a></td><td rowspan="1">1743850168279</td><td rowspan="1">6372</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">SampleSuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">SampleTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">groupscripts.SampleThree</td><td><a href="#m0">testOne</a></td><td rowspan="1">1743855072032</td><td rowspan="1">16</td></tr><tr class="passedodd"><td rowspan="1">groupscripts.SampleTwo</td><td><a href="#m1">testOne</a></td><td rowspan="1">1743855072067</td><td rowspan="1">3</td></tr><tr class="passedeven"><td rowspan="1">groupscripts.Sampleone</td><td><a href="#m2">testOne</a></td><td rowspan="1">1743855072082</td><td rowspan="1">3</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">testScripts.Booksearchtest#crimenovel</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testScripts.Booksearchtest#f</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>SampleTest</h2><h3 id="m0">groupscripts.SampleThree#testOne</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">groupscripts.SampleTwo#testOne</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">groupscripts.Sampleone#testOne</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
