--- a/test-output/index.html
+++ b/test-output/index.html
@@ -25,7 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -39,7 +39,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-SampleSuite" class="navigator-link">
-              <span class="suite-name border-passed">SampleSuite</span>
+              <span class="suite-name border-failed">SampleSuite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -60,7 +60,7 @@
                 </li>
                 <li>
                   <a href="#" panel-name="group-SampleSuite" class="navigator-link ">
-                    <span>1 group</span>
+                    <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">2 methods, 1 failed,   1 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-SampleSuite" class="hide-methods failed suite-SampleSuite"> (hide)</a> <!-- hide-methods failed suite-SampleSuite -->
+                      <a href="#" panel-name="suite-SampleSuite" class="show-methods failed suite-SampleSuite"> (show)</a> <!-- show-methods failed suite-SampleSuite -->
+                    </span>
+                    <div class="method-list-content failed suite-SampleSuite">
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-SampleSuite" title="testScripts.Booksearchtest" class="method navigator-link" hash-for-method="storiesnovel">storiesnovel</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content failed suite-SampleSuite -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,17 +117,7 @@
                     <div class="method-list-content passed suite-SampleSuite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-SampleSuite" title="groupscripts.SampleThree" class="method navigator-link" hash-for-method="testOne">testOne</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-SampleSuite" title="groupscripts.SampleTwo" class="method navigator-link" hash-for-method="testOne">testOne</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-SampleSuite" title="groupscripts.Sampleone" class="method navigator-link" hash-for-method="testOne">testOne</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-SampleSuite" title="testScripts.Booksearchtest" class="method navigator-link" hash-for-method="horrernovel">horrernovel</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-SampleSuite -->
@@ -128,47 +132,37 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-SampleSuite" class="panel SampleSuite">
-          <div class="suite-SampleSuite-class-passed">
+          <div class="suite-SampleSuite-class-failed">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">groupscripts.SampleTwo</span>
+              <img src="failed.png"/>
+              <span class="class-name">testScripts.Booksearchtest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testOne">
-                  </a> <!-- testOne -->
-                  <span class="method-name">testOne</span>
+                  <a name="storiesnovel">
+                  </a> <!-- storiesnovel -->
+                  <span class="method-name">storiesnovel</span>
+                  <div class="stack-trace">java.lang.AssertionError: expected [true] but found [false]
+	at testScripts.Booksearchtest.storiesnovel(Booksearchtest.java:85)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 31 stack frames
+</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-SampleSuite-class-passed -->
+          </div> <!-- suite-SampleSuite-class-failed -->
           <div class="suite-SampleSuite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">groupscripts.Sampleone</span>
+              <span class="class-name">testScripts.Booksearchtest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testOne">
-                  </a> <!-- testOne -->
-                  <span class="method-name">testOne</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-SampleSuite-class-passed -->
-          <div class="suite-SampleSuite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">groupscripts.SampleThree</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="testOne">
-                  </a> <!-- testOne -->
-                  <span class="method-name">testOne</span>
+                  <a name="horrernovel">
+                  </a> <!-- horrernovel -->
+                  <span class="method-name">horrernovel</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -183,21 +177,10 @@
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;SampleSuite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
-  &lt;groups&gt;
-    &lt;run&gt;
-      &lt;include name=&quot;featureone&quot;/&gt;
-    &lt;/run&gt;
-  &lt;/groups&gt;
-  &lt;groups&gt;
-    &lt;run&gt;
-      &lt;include name=&quot;featureone&quot;/&gt;
-    &lt;/run&gt;
-  &lt;/groups&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;SampleTest&quot;&gt;
+    &lt;parameter name=&quot;browser&quot; value=&quot;edge&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;groupscripts.SampleThree&quot;/&gt;
-      &lt;class name=&quot;groupscripts.SampleTwo&quot;/&gt;
-      &lt;class name=&quot;groupscripts.Sampleone&quot;/&gt;
+      &lt;class name=&quot;testScripts.Booksearchtest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- SampleTest --&gt;
 &lt;/suite&gt; &lt;!-- SampleSuite --&gt;
@@ -211,7 +194,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">SampleTest (3 classes)</span>
+                <span class="test-name">SampleTest (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -221,14 +204,6 @@
             <span class="header-content">Groups for SampleSuite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="test-group">
-              <span class="test-group-name">featureone</span>
-              <br/>
-              <div class="method-in-group">
-                <span class="method-in-group-name">testOne</span>
-                <br/>
-              </div> <!-- method-in-group -->
-            </div> <!-- test-group -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="times-SampleSuite" class="panel">
@@ -245,24 +220,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testOne')
-data.setCell(0, 2, 'groupscripts.SampleThree')
-data.setCell(0, 3, 16);
+data.setCell(0, 1, 'storiesnovel')
+data.setCell(0, 2, 'testScripts.Booksearchtest')
+data.setCell(0, 3, 2203);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testOne')
-data.setCell(1, 2, 'groupscripts.SampleTwo')
-data.setCell(1, 3, 3);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'testOne')
-data.setCell(2, 2, 'groupscripts.Sampleone')
-data.setCell(2, 3, 3);
+data.setCell(1, 1, 'horrernovel')
+data.setCell(1, 2, 'testScripts.Booksearchtest')
+data.setCell(1, 3, 2131);
 window.suiteTableData['SampleSuite']= { tableData: data, tableDiv: 'times-div-SampleSuite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 22 ms</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-SampleSuite">
               </div> <!-- times-div-SampleSuite -->
             </div> <!-- times-div -->
@@ -277,36 +248,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-SampleSuite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">6 ignored methods</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">groupscripts.SampleTwo</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">testTwo</span>
-                <br/>
-                <span class="ignored-method-name">testThree</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">groupscripts.Sampleone</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">testTwo</span>
-                <br/>
-                <span class="ignored-method-name">testThree</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">groupscripts.SampleThree</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">testTwo</span>
-                <br/>
-                <span class="ignored-method-name">testThree</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-SampleSuite" class="panel">
@@ -315,25 +259,33 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">groupscripts.SampleThree</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">testOne</span>
+              <div class="chronological-class-name">testScripts.Booksearchtest</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">pre(edge)</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">groupscripts.SampleTwo</div> <!-- chronological-class-name -->
+              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">testOne</span>
-                <span class="method-start">35 ms</span>
+                <img src="failed.png">
+                </img>
+                <span class="method-name">storiesnovel</span>
+                <span class="method-start">11061 ms</span>
               </div> <!-- test-method -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">groupscripts.Sampleone</div> <!-- chronological-class-name -->
+              <div class="configuration-method after">
+                <span class="method-name">toclose</span>
+                <span class="method-start">13271 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">pre(edge)</span>
+                <span class="method-start">13657 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">testOne</span>
-                <span class="method-start">50 ms</span>
+                <span class="method-name">horrernovel</span>
+                <span class="method-start">23046 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">toclose</span>
+                <span class="method-start">25179 ms</span>
+              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
